--- a/src/main/resources/messages_ar.properties
+++ b/src/main/resources/messages_ar.properties
@@ -11,6 +11,7 @@ org.ahmedukamel.gazl.service.government.GovernmentService.updateGovernment=\u062
 org.ahmedukamel.gazl.service.government.GovernmentService.deleteGovernment=\u062a\u0645\u0020\u062d\u0630\u0641\u0020\u062c\u0647\u0629\u0020\u062d\u0643\u0648\u0645\u064a\u0629\u0020\u0628\u0646\u062c\u0627\u062d
 org.ahmedukamel.gazl.service.government.GovernmentService.getGovernment=\u062a\u0645\u0020\u0627\u0644\u062d\u0635\u0648\u0644\u0020\u0639\u0644\u064a\u0020\u0627\u0644\u062c\u0647\u0629\u0020\u0627\u0644\u062d\u0643\u0648\u0645\u064a\u0629\u0020\u0628\u0646\u062c\u0627\u062d
 org.ahmedukamel.gazl.service.government.GovernmentService.getGovernments=\u062a\u0645\u0020\u0627\u0644\u062d\u0635\u0648\u0644\u0020\u0639\u0644\u064a\u0020\u0627\u0644\u062c\u0647\u0627\u062a\u0020\u0627\u0644\u062d\u0643\u0648\u0645\u064a\u0629\u0020\u0628\u0646\u062c\u0627\u062d
+org.ahmedukamel.gazl.service.government.GovernmentService.updateLogo=\u062a\u0645\u0020\u062a\u062d\u062f\u064a\u062b\u0020\u0627\u0644\u0634\u0639\u0627\u0631\u0020\u0628\u0646\u062c\u0627\u062d
 # Global Exception Handler Messages
 org.ahmedukamel.gazl.handler.GlobalExceptionHandler.handleDisabledException=\u0644\u0645\u0020\u064a\u062a\u0645\u0020\u062a\u0641\u0639\u064a\u0644\u0020\u0627\u0644\u062d\u0633\u0627\u0628\u0020\u0628\u0639\u062f\u002e
 org.ahmedukamel.gazl.handler.GlobalExceptionHandler.handleLockedException=\u062a\u0645\u0020\u0642\u0641\u0644\u0020\u0627\u0644\u062d\u0633\u0627\u0628\u0020\u0645\u0646\u0020\u0642\u0628\u0644\u0020\u0627\u0644\u0645\u0634\u0631\u0641\u064a\u0646\u002e
